--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ajv": "^8.8.1",
     "ajv-formats": "^2.1.1",
     "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.1",
     "express-validator": "^6.13.0",
