--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^6.0.1",
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.1",
     "otp-generator": "^4.0.0"
